# Aethaum

./: .gitignore  Cargo.toml  README.md  README_en.md
crates/aethaum-core/: Cargo.toml
crates/aethaum-core/src/: code_generator.rs  ecs.rs
crates/aethaum-core/src/code_generator/: aethaum_predefined.rs  lua_binding.rs  project_template.rs  transpile.rs  utils.rs
crates/aethaum-core/src/code_generator/lua_binding/: bevy_plugin.rs  ecs.rs  execution_context.rs  reflection.rs
crates/aethaum-core/src/code_generator/lua_binding/ecs/: component.rs  entity.rs
crates/aethaum-core/src/toml_parser/: parsed.rs
test_project/modules/explore/events/: required_events.toml
test_project_template/test/: Cargo.toml
test_project_template/test/config/: config.toml
test_project_template/test/src/: aethaum_predefined.rs  lib.rs  lua_bindings.rs  main.rs  modules.rs
test_project_template/test/src/modules/: explore.rs
