[package]
name = "MyAIWorld"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.11.2", features = ["lua54", "vendored"] }
bevy_ecs = "0.16.1"
bevy_app = "0.16.1"
smart-string = { version = "0.1.3", features = ["serde"]}
itertools = "0.14.0"
one-or-many = "0.4.0"
miette = "7.6.0"
thiserror = "2.0.16"
            